# q-and-a-api-with-warp

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  setup.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20221227104805_questions_table.up.sql  20221227105144_answers_table.up.sql  20221229121639_create_accounts_table.up.sql
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
